# claude-coach

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  backlog.md  pyproject.toml  specs.md
.claude/agents/: coach.md
.github/workflows/: ci.yml
references/decathlon-plans/: README.md  course-route-10km-45min-6sem.md  course-route-semi-marathon-10sem.md  course-trail-montagne-50km-12sem.md  course-vma-confirme-8sem.md  musculation-12sem.md  natation-renfo-puissance-4sem.md  prevention-epaule-souple-forte-2sem.md  prevention-genou-stable-2sem.md  renfo-cyclistes-poids-corps-6sem.md  ski-prepa-physique-4sem.md  triathlon-L-70.3-16sem.md  velo-indoor-cycliste-complet-9sem.md  velo-indoor-endurance-9sem.md
scripts/: install-launchd-sync.sh
src/claude_coach/: auth.py  cli.py  client.py  coach.py  db.py  intervals.py  models.py  nolio.py  nolio_auth.py  rate_limiter.py  serializers.py  sync.py  workout.py  zwo.py
src/strava_connect/: auth.py  cli.py  client.py  coach.py  db.py  models.py  rate_limiter.py  serializers.py  sync.py
tasks/: lessons.md  todo.md
tests/: conftest.py  test_auth.py  test_cli_activity.py  test_cli_athlete.py  test_cli_auth.py  test_cli_coach.py  test_cli_debrief.py  test_cli_status.py  test_cli_sync.py  test_client.py  test_coach.py  test_db.py  test_db_debrief.py  test_intervals.py  test_nolio.py  test_nolio_auth.py  test_rate_limiter.py  test_smoke.py  test_subagent_coach.py  test_sync.py  test_workout.py  test_zwo.py
