[project]
name = "strava-connect"
version = "0.0.1"
description = "Connecteur CLI Strava — synchronise les activités sportives dans une base SQLite locale."
requires-python = ">=3.12"
readme = "specs.md"
license = { text = "Proprietary" }
authors = [{ name = "benoitvx" }]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-httpserver>=1.1",
    "pre-commit>=3.7",
]

[project.scripts]
strava-connect = "strava_connect.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/strava_connect"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
